Created new webpage on AI

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <ul>
-            
+            <li><a href="AIInHealthcare.html">AI in Healthcare</a></li>
         </ul>
         <p></p>
     </body>
