Added link to gaming webpage from index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <ul>
             <li><a href="AIInHealthcare.html">AI in Healthcare</a></li>
+            <li><a href="gaming.html">Are your parents right about video games??????</a></li>
         </ul>
         <p></p>
     </body>
