Added information to gaming page

--- a/gaming.html
+++ b/gaming.html
@@ -9,6 +9,8 @@
     </head>
     <body>
         <h1>Is gaming benficial to society?</h1>
-        <p>Hello</p>
+        <p>Many people have the misguided belief that video games
+            lead to 
+        </p>
     </body>
 </html>
