New paragraph about AI in healthcare
This relates to alphafold and protein folding

--- a/AIInHealthcare.html
+++ b/AIInHealthcare.html
@@ -13,12 +13,13 @@
         <h1>AI in Healthcare</h1>
         <p>AI has made various contributions to the healthcare sector.</p>
         <h2>Alphafold and protein folding</h2>
-        <p>Protein folding refers to the way in which a ribbon of amino acids fold to form protiens. The order of the amino acids determines how the amino acids fold together, and hence the function of the protein.</p>
-        <p></p>
-        
-        <h1>References</h1>
+        <p>Protein folding refers to the way in which a chain of amino acids folds to form proteins. The order of the amino acids determines how the amino acids fold together, and hence the function of the protein.</p>
+        <p>The structure of proteins can be determined expreimentally through the use of techniques like x-ray crystallography and nuclear magnetic resonance [<a href="#r1">1</a>], but these techniques are time consuming and expensive. Due to the trial and error nature of x-ray crystallography, you can expect to find the structure of a protein within a few days or weeks [<a href="#r2">2</a>]. On the other hand, alphafold can find the shape of the protein "within a few days" [<a href="#r1">1</a>]</p>
+<!--  -->
+        <h2>References</h2>
         <ul id="references">
-            <li>[1] Heaven, W.D. (2020). DeepMind's protein-folding AI has solved a 50-year-old grand challenge of biology. [online] MIT Technology Review. Available at: https://www.technologyreview.com/2020/11/30/1012712/deepmind-protein-folding-ai-solved-biology-science-drugs-disease.</li>
+            <li id="r1">[1] Heaven, W.D. (2020). DeepMind's protein-folding AI has solved a 50-year-old grand challenge of biology. [online] MIT Technology Review. Available at: https://www.technologyreview.com/2020/11/30/1012712/deepmind-protein-folding-ai-solved-biology-science-drugs-disease [Accessed 28 Oct 2025].</li>
+            <li id="r2">[2] John Innes Centre. (2020). What is Protein X-Ray Crystallography? | John Innes Centre. [online] Available at: https://www.jic.ac.uk/blog/what-is-protein-x-ray-crystallography [Accessed 28 Oct. 2025].</li>
         </ul>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     </body>
