--- a/gaming.html
+++ b/gaming.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="dark">
+
     <head>
         <meta charset="utf-8" \>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +11,20 @@
     <body>
         <h1>Is gaming benficial to society?</h1>
         <p>Many people have the misguided belief that video games
-            lead to 
+            lead to a rotting brain, but is this the case?
+            In fact, many studies have concluded that video games actually benefit our cognition. They can help with 
+            many skills in life including, but not limited to: 
+            <ul>
+                <li>Problem solving</li>
+                <li>Spatial logic</li>
+                <li>Reaction time</li>
+                <li>Hand eye coordination</li>
+                <li>Strategic thinking</li>
+            </ul> 
+             Depending on the games you play, different skills can 
+            be improved.  
         </p>
+        
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     </body>
 </html>
