--- a/index.html
+++ b/index.html
@@ -2,14 +2,25 @@
 <html>
     <head>
         <meta charset="utf-8" \>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="styles/style.css" \>
         <title>Title</title>
     </head>
     <body>
-        <ul>
-            <li><a href="AIInHealthcare.html">AI in Healthcare</a></li>
-            <li><a href="gaming.html">Are your parents right about video games??????</a></li>
-        </ul>
-        <p></p>
+        <h3>Here you can explore the positive contributions of computing</h3>
+        <div class="dropdown" data-bs-theme="dark">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonDark" data-bs-toggle="dropdown" aria-expanded="false">
+                Topics to explore!
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonDark">
+                <li><a class="dropdown-item" href="gaming.html">The better webpage</a></li>
+                <li><a class="dropdown-item" href="AIInHealthcare.html">AI</a></li>
+                <li><a class="dropdown-item" href="communication.html">Communications</a></li>
+                
+            </ul>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     </body>
 </html>
