Modified the tabs

--- a/index.html
+++ b/index.html
@@ -8,13 +8,25 @@
         <title>Title</title>
     </head>
     <body>
+        <ul class="nav nav-pills nav-fill">
+            <li class="nav-item">
+                <a class="nav-link" href="gaming.html">Gaming benefits</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="AIInHealthcare.html">AI in healthcare</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="communication.html">Benefits of communications</a>
+            </li>
+            
+        </ul>
         <h3>Here you can explore the positive contributions of computing</h3>
         <div class="dropdown" data-bs-theme="dark">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonDark" data-bs-toggle="dropdown" aria-expanded="false">
                 Topics to explore!
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonDark">
-                <li><a class="dropdown-item" href="gaming.html">The better webpage</a></li>
+                <li><a class="dropdown-item" href="gaming.html">Benefits of Gaming</a></li>
                 <li><a class="dropdown-item" href="AIInHealthcare.html">AI</a></li>
                 <li><a class="dropdown-item" href="communication.html">Communications</a></li>
                 
