Added navigation bar to all web pages

--- a/AIInHealthcare.html
+++ b/AIInHealthcare.html
@@ -10,6 +10,17 @@
         <title>AI in Healthcare</title>
     </head>
     <body>
+        <ul class="nav nav-pills nav-fill">
+            <li class="nav-item">
+                <a class="nav-link" href="gaming.html">Gaming benefits</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="AIInHealthcare.html">AI in healthcare</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="communication.html">Benefits of communications</a>
+            </li>
+        </ul>
         <h1>AI in Healthcare</h1>
         <p>AI has made various contributions to the healthcare sector.</p>
         <h2>Alphafold and protein folding</h2>
