--- a/communication.html
+++ b/communication.html
@@ -8,6 +8,17 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     </head>
     <body>
+        <ul class="nav nav-pills nav-fill">
+            <li class="nav-item">
+                <a class="nav-link" href="gaming.html">Gaming benefits</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="AIInHealthcare.html">AI in healthcare</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="communication.html">Benefits of communications</a>
+            </li>
+        </ul>
         <h1>Impacts of Computing on Communication</h1>
         <dl>
             <dt>Email</dt>
