--- a/gaming.html
+++ b/gaming.html
@@ -9,6 +9,17 @@
         <title>How has gaming benefited society</title>
     </head>
     <body>
+        <ul class="nav nav-pills nav-fill">
+            <li class="nav-item">
+                <a class="nav-link" href="gaming.html">Gaming benefits</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="AIInHealthcare.html">AI in healthcare</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="communication.html">Benefits of communications</a>
+            </li>
+        </ul>
         <h1>Is gaming benficial to society?</h1>
         <p>Many people have the misguided belief that video games
             lead to a rotting brain, but is this the case?
