Added home page to navigation bar

--- a/gaming.html
+++ b/gaming.html
@@ -11,6 +11,9 @@
     <body>
         <ul class="nav nav-pills nav-fill">
             <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="gaming.html">Gaming benefits</a>
             </li>
             <li class="nav-item">
