Added dark mode switch to all web pages

--- a/communication.html
+++ b/communication.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="light">
     <head>
         <meta charset="utf-8" \>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="styles/style.css" \>
         <title>Impacts of Computing on Communication</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+        <script src="scripts/theme.js" defer></script>
     </head>
     <body>
         <ul class="nav nav-pills nav-fill">
@@ -23,6 +24,7 @@
             </li>
         </ul>
         <h1>Impacts of Computing on Communication</h1>
+        <button id="colourSwitch" type="button">Switch modes</button>
         <dl>
             <dt>Email</dt>
             <dd>Email is one of the earliest forms of digital communication and is still used today. It allows users to send messages and files between computers asynchronously - meaninging the sender and receiver don't need to be online at the same time.</dd>
