--- a/AIInHealthcare.html
+++ b/AIInHealthcare.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="light">
     <head>
         <meta charset="utf-8" \>
         <meta name="author" content="Matthew Widdop" \>
@@ -7,6 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="styles/style.css" \>
         <link rel="stylesheet" type="text/css" href="styles/AIInHealthcare.css" \>
+        <script src="scripts/theme.js" defer></script>
         <title>AI in Healthcare</title>
     </head>
     <body>
@@ -25,6 +26,7 @@
             </li>
         </ul>
         <h1>AI in Healthcare</h1>
+        <button id="colourSwitch" type="button">Switch modes</button>
         <p>AI has made various contributions to the healthcare sector.</p>
         <h2>Alphafold and protein folding</h2>
         <p>Protein folding refers to the way in which a chain of amino acids folds to form proteins. The order of the amino acids determines how the amino acids fold together, and hence the function of the protein.</p>
