--- a/gaming.html
+++ b/gaming.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html data-bs-theme="dark">
+<html data-bs-theme="light">
 
     <head>
         <meta charset="utf-8" \>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="styles/style.css" \>
+        <script src="scripts/theme.js" defer></script>
         <title>How has gaming benefited society</title>
     </head>
     <body>
@@ -24,6 +25,7 @@
             </li>
         </ul>
         <h1>Is gaming benficial to society?</h1>
+        <button id="colourSwitch" type="button">Switch modes</button>
         <p>Many people have the misguided belief that video games
             lead to a rotting brain, but is this the case?
             In fact, many studies have concluded that video games actually benefit our cognition. They can help with 
