--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="light">
     <head>
         <meta charset="utf-8" \>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="styles/style.css" \>
+        <script src="scripts/theme.js" defer></script>
         <title>Contributions of Computer Science to Society</title>
     </head>
     <body>
@@ -23,6 +24,7 @@
             </li>
         </ul>
         <h3>Here you can explore the positive contributions of computing</h3>
+        <button id="colourSwitch" type="button">Switch modes</button>
         <div class="dropdown" data-bs-theme="dark">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonDark" data-bs-toggle="dropdown" aria-expanded="false">
                 Topics to explore!
