Changed initial text for dark mode buttons

--- a/AIInHealthcare.html
+++ b/AIInHealthcare.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-bs-theme="light">
+<html>
     <head>
         <meta charset="utf-8" \>
         <meta name="author" content="Matthew Widdop" \>
@@ -26,7 +26,7 @@
             </li>
         </ul>
         <h1>AI in Healthcare</h1>
-        <button id="colourSwitch" type="button">Switch modes</button>
+        <button id="colourSwitch" type="button">Switch to dark mode</button>
         <p>AI has made various contributions to the healthcare sector.</p>
         <h2>Alphafold and protein folding</h2>
         <p>Protein folding refers to the way in which a chain of amino acids folds to form proteins. The order of the amino acids determines how the amino acids fold together, and hence the function of the protein.</p>
