--- a/communication.html
+++ b/communication.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-bs-theme="light">
+<html>
     <head>
         <meta charset="utf-8" \>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +24,7 @@
             </li>
         </ul>
         <h1>Impacts of Computing on Communication</h1>
-        <button id="colourSwitch" type="button">Switch modes</button>
+        <button id="colourSwitch" type="button">Switch to dark mode</button>
         <dl>
             <dt>Email</dt>
             <dd>Email is one of the earliest forms of digital communication and is still used today. It allows users to send messages and files between computers asynchronously - meaninging the sender and receiver don't need to be online at the same time.</dd>
