--- a/gaming.html
+++ b/gaming.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-bs-theme="light">
+<html>
 
     <head>
         <meta charset="utf-8" \>
@@ -25,7 +25,7 @@
             </li>
         </ul>
         <h1>Is gaming benficial to society?</h1>
-        <button id="colourSwitch" type="button">Switch modes</button>
+        <button id="colourSwitch" type="button">Switch to dark mode</button>
         <p>Many people have the misguided belief that video games
             lead to a rotting brain, but is this the case?
             In fact, many studies have concluded that video games actually benefit our cognition. They can help with 
