--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-bs-theme="light">
+<html>
     <head>
         <meta charset="utf-8" \>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,7 +25,7 @@
             
         </ul>
         <h3>Here you can explore the positive contributions of computing</h3>
-        <button id="colourSwitch" type="button">Switch modes</button>
+        <button id="colourSwitch" type="button">Switch to dark mode</button>
         <div class="dropdown" data-bs-theme="dark">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonDark" data-bs-toggle="dropdown" aria-expanded="false">
                 Topics to explore!
